force-app/main/default/objects/Opportunity/fields/Deal_Desk_More_Details__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_More_Details__c</fullName>
    <description>MIS-3350</description>
    <label>Deal Desk - More Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>