force-app/main/default/objects/Opportunity/fields/Deal_Desk_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Specialist__c</fullName>
    <description>MIS-4360</description>
    <label>Deal Desk Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>