force-app/main/default/objects/Opportunity/fields/Deal_Desk_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Status__c</fullName>
    <description>MIS-3350</description>
    <label>Deal Desk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DD Submitted</fullName>
            </value>
            <value>
                <fullName>DD Resubmitted</fullName>
            </value>
            <value>
                <fullName>Pending Legal Review</fullName>
            </value>
            <value>
                <fullName>Pending Billing Review</fullName>
            </value>
            <value>
                <fullName>Pending Client</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Legal</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Billing</fullName>
            </value>
            <value>
                <fullName>DD Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>