force-app/main/default/objects/Opportunity/fields/Deal_Reg_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Reg_Status__c</fullName>
    <formula>TEXT(Account.Deal_Reg_Status__c)</formula>
    <label>Deal Reg Status</label>
    <type>Text</type>
</CustomField>