force-app/main/default/objects/Opportunity/fields/Deal_verbal_agreement_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Deal_verbal_agreement_AI_Evidence__c</fullName>
    <label>Deal verbal agreement - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>