force-app/main/default/objects/Opportunity/fields/Debooked_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debooked_Amount__c</fullName>
    <description>For tracking debooking of opportunities</description>
    <label>Debooked Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>