force-app/main/default/objects/Opportunity/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>MIS-2043</description>
    <inlineHelpText>What technical, economic, and relationship criteria are they using when vetting solutions?</inlineHelpText>
    <label>Decision Criteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>