force-app/main/default/objects/Opportunity/fields/Decision_Criteria_Competition_AI_Feed__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Competition_AI_Feed__c</fullName>
    <description>MIS-7356</description>
    <label>Decision Criteria &amp; Competition: AI Feed</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>