force-app/main/default/objects/Opportunity/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <description>MIS-2043</description>
    <inlineHelpText>What are the series of steps used to select and purchase from a vendor?</inlineHelpText>
    <label>Decision Process</label>
    <type>TextArea</type>
</CustomField>