force-app/main/default/objects/Opportunity/fields/Decision_Process_AI__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_AI__c</fullName>
    <description>MIS-7356</description>
    <label>Decision Process: AI</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>