force-app/main/default/objects/Opportunity/fields/Decision_Process_AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process_AI_Feedback__c</fullName>
    <description>MIS-7356</description>
    <label>Decision Process: AI Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>