force-app/main/default/objects/Opportunity/fields/Delta_ARR__c.field-meta.xml
<CustomField>
    <fullName>Delta_ARR__c</fullName>
    <formula>IF(
ISPICKVAL( Type , &apos;Renewal&apos;),
ARR__c - Original_Renewal_Amount__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>