force-app/main/default/objects/Opportunity/fields/Demonstrate_positive_ROI_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Demonstrate_positive_ROI_AI_Evidence__c</fullName>
    <label>Demonstrate positive ROI - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>