force-app/main/default/objects/Opportunity/fields/Describe_the_proposed_solution_discount__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_proposed_solution_discount__c</fullName>
    <description>MIS-7131</description>
    <label>Describe the proposed solution/discount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>