force-app/main/default/objects/Opportunity/fields/Destination_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Bucket_Name__c</fullName>
    <label>Destination Bucket Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>