force-app/main/default/objects/Opportunity/fields/Did_we_offer_a_cheaper_solution_discount__c.field-meta.xml
<CustomField>
    <fullName>Did_we_offer_a_cheaper_solution_discount__c</fullName>
    <description>MIS-7131</description>
    <label>Did we offer a cheaper solution/discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>