force-app/main/default/objects/Opportunity/fields/DMI__c.field-meta.xml
<CustomField>
    <fullName>DMI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Marketing Intelligence - MIS - 2073</description>
    <inlineHelpText>Digital Marketing Intelligence</inlineHelpText>
    <label>DMI</label>
    <type>Checkbox</type>
</CustomField>