force-app/main/default/objects/Opportunity/fields/Do_customer_have_PO__c.field-meta.xml
<CustomField>
    <fullName>Do_customer_have_PO__c</fullName>
    <description>MQ-2126</description>
    <label>Is a PO required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes, but we don&apos;t have the number yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>