force-app/main/default/objects/Opportunity/fields/DocuSign_Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Status__c</fullName>
    <label>DocuSign Envelope Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>