force-app/main/default/objects/Opportunity/fields/Downsell_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Downsell_Reasons__c</fullName>
    <inlineHelpText>Please select up to 2 of the following reasons</inlineHelpText>
    <label>Downsell Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Downsell</fullName>
            </value>
            <value>
                <fullName>Relationship - No relationship with decision-making authority</fullName>
            </value>
            <value>
                <fullName>Relationship - Working with few/wrong teams for company’s use case(s)</fullName>
            </value>
            <value>
                <fullName>Relationship - Insufficient touchpoints/onboarding/education</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Downgraded plan / removed feature(s)</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Missing Feature / Granularity</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Missing Coverage (country / platform)</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Data Accuracy Discrepancies</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Product or features unfit for the use case</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Pricing and packaging unfit for client’s needs</fullName>
            </value>
            <value>
                <fullName>Pricing Gap - Unwilling to pay previous price as pricing did not justify ROI/value</fullName>
            </value>
            <value>
                <fullName>Pricing Gap - Price match vs competitor</fullName>
            </value>
            <value>
                <fullName>Client Gap - Insufficient Budget (unable to pay previous price due to internal budget reasons)</fullName>
            </value>
            <value>
                <fullName>Client Gap - Getting data from Agency/Third Party</fullName>
            </value>
            <value>
                <fullName>Conversion Rate/currency technicality (requires approval)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>