force-app/main/default/objects/Opportunity/fields/DRI__c.field-meta.xml
<CustomField>
    <fullName>DRI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Research Intelligence - MIS 2073</description>
    <inlineHelpText>Digital Research Intelligence</inlineHelpText>
    <label>DRI</label>
    <type>Checkbox</type>
</CustomField>