force-app/main/default/objects/Opportunity/fields/Early_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Early_Renewal__c</fullName>
    <formula>AND(
Original_Renewal_Date__c - CloseDate &gt;= 60,
TEXT(StageName) = &apos;Closed Won&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Renewal</label>
    <type>Checkbox</type>
</CustomField>