force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-2043</description>
    <inlineHelpText>Who is the person with the overall authority in the buying decision?</inlineHelpText>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>