force-app/main/default/objects/Opportunity/fields/Economic_Buyer_AI__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_AI__c</fullName>
    <description>MIS-7356</description>
    <label>Economic Buyer: AI</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>