force-app/main/default/objects/Opportunity/fields/Economic_Buyer_AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_AI_Feedback__c</fullName>
    <description>MIS-7356</description>
    <label>Economic Buyer: AI Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>