force-app/main/default/objects/Opportunity/fields/Economic_Buyer_interest_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_interest_AI_Evidence__c</fullName>
    <label>Economic Buyer interest - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>