force-app/main/default/objects/Opportunity/fields/Economic_Buyer_Title__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer_Title__c</fullName>
    <description>MIS-3658</description>
    <label>Economic Buyer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>