force-app/main/default/objects/Opportunity/fields/Estimated_Next_Month_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Next_Month_Payment__c</fullName>
    <label>Estimated Next Month Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>