force-app/main/default/objects/Opportunity/fields/EVP_Finance_Countersign__c.field-meta.xml
<CustomField>
    <fullName>EVP_Finance_Countersign__c</fullName>
    <label>EVP Finance Countersign?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Relevant</fullName>
                <default>true</default>
                <label>Not Relevant</label>
            </value>
            <value>
                <fullName>Needs to Sign</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>