force-app/main/default/objects/Opportunity/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <description>keeps the updated exchange rate between USD and Local Currency</description>
    <inlineHelpText>keeps the updated exchange rate between USD and Local Currency</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>