force-app/main/default/objects/Opportunity/fields/Expansion_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Opportunities__c</fullName>
    <label>Expansion Field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>