force-app/main/default/objects/Opportunity/fields/Final_touchpoint_in_the_renewal_process__c.field-meta.xml
<CustomField>
    <fullName>Final_touchpoint_in_the_renewal_process__c</fullName>
    <description>MIS-7131</description>
    <inlineHelpText>What action did you take, when did it occur, and how did the customer respond?</inlineHelpText>
    <label>Final touchpoint in the renewal process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>