force-app/main/default/objects/Opportunity/fields/Financial_or_operational_impact_AI_Evi__c.field-meta.xml
<CustomField>
    <fullName>Financial_or_operational_impact_AI_Evi__c</fullName>
    <label>Financial or operational impact - AI Evi</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>