force-app/main/default/objects/Opportunity/fields/First_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign_Touch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by MarkOps to track first engagement with a prospect</description>
    <label>First Campaign Touch</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>First Touch Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>