force-app/main/default/objects/Opportunity/fields/First_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>First_Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Lost_Reason_Values</valueSetName>
    </valueSet>
</CustomField>