force-app/main/default/objects/Opportunity/fields/First_Commit_ARR__c.field-meta.xml
<CustomField>
    <fullName>First_Commit_ARR__c</fullName>
    <description>MIS-6405
first ARR of the opportunity when moved to Commit</description>
    <label>First Commit ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>