force-app/main/default/objects/Opportunity/fields/First_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Commit_Date__c</fullName>
    <description>MIS-6405
first date that the opportunity moved to Commit</description>
    <label>First Commit Date</label>
    <type>Date</type>
</CustomField>