force-app/main/default/objects/Opportunity/fields/First_Forecasting_Value_For_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>First_Forecasting_Value_For_This_Quarter__c</fullName>
    <description>MIS-4500</description>
    <label>First forecasting value for this quarter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>