force-app/main/default/objects/Opportunity/fields/First_touchpoint_in_the_renewal_process__c.field-meta.xml
<CustomField>
    <fullName>First_touchpoint_in_the_renewal_process__c</fullName>
    <description>MIS-7131</description>
    <inlineHelpText>When did it happen, who was involved, and what was the purpose or outcome?</inlineHelpText>
    <label>First touchpoint in the renewal process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>