force-app/main/default/objects/Opportunity/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>MIS-2388</description>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>