force-app/main/default/objects/Opportunity/fields/Forecasting_Status_Q_First_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Status_Q_First_Value_Date__c</fullName>
    <description>MIS-5588 will populate when SW_Forecasting_Status_First_Value__c if filled</description>
    <label>Forecasting Status Q First Value Date</label>
    <type>Date</type>
</CustomField>