force-app/main/default/objects/Opportunity/fields/FR_Account_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>FR_Account_Collection_Status__c</fullName>
    <description>MIS-6468</description>
    <formula>TEXT(Account.Account_Collection_Status__c)</formula>
    <label>FR Account Collection Status</label>
    <type>Text</type>
</CustomField>