force-app/main/default/objects/Opportunity/fields/FTPFS_actual_path__c.field-meta.xml
<CustomField>
    <fullName>FTPFS_actual_path__c</fullName>
    <label>FTPFS actual path</label>
    <type>TextArea</type>
</CustomField>