force-app/main/default/objects/Opportunity/fields/FTPFS_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>FTPFS_Data_Type__c</fullName>
    <label>FTPFS Data Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desktop Advance</fullName>
            </value>
            <value>
                <fullName>Desktop Simple</fullName>
            </value>
            <value>
                <fullName>Desktop Slicer - Simple</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Mobile History Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>