force-app/main/default/objects/Opportunity/fields/FTPFS_User_ID__c.field-meta.xml
<CustomField>
    <fullName>FTPFS_User_ID__c</fullName>
    <label>FTPFS User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>