force-app/main/default/objects/Opportunity/fields/FTPFS_virtual_path__c.field-meta.xml
<CustomField>
    <fullName>FTPFS_virtual_path__c</fullName>
    <label>FTPFS virtual path</label>
    <type>TextArea</type>
</CustomField>