force-app/main/default/objects/Opportunity/fields/GDPR_Compliant_wolves__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliant_wolves__c</fullName>
    <label>GDPR Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>