force-app/main/default/objects/Opportunity/fields/General_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Manager_Email__c</fullName>
    <description>The third level of Manager&apos;s Email field. The field is populated with the Opp Owner.Manager.Manager.Manager.Email for New Opps or when the Opp Owner was changed. MIS - 1814</description>
    <label>General Manager Email</label>
    <type>Email</type>
</CustomField>