force-app/main/default/objects/Opportunity/fields/Have_SE__c.field-meta.xml
<CustomField>
    <fullName>Have_SE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Opp has SE Request</description>
    <label>Have SE</label>
    <type>Checkbox</type>
</CustomField>