force-app/main/default/objects/Opportunity/fields/Have_we_met_the_customer_face_to_face__c.field-meta.xml
<CustomField>
    <fullName>Have_we_met_the_customer_face_to_face__c</fullName>
    <label>Have we met the customer face-to-face?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>