force-app/main/default/objects/Opportunity/fields/Historical_Data__c.field-meta.xml
<CustomField>
    <fullName>Historical_Data__c</fullName>
    <label>Historical Data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>