force-app/main/default/objects/Opportunity/fields/How_do_we_solve_it__c.field-meta.xml
<CustomField>
    <fullName>How_do_we_solve_it__c</fullName>
    <description>Part of Meddic implementation</description>
    <label>What are the Required Capabilities</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>