force-app/main/default/objects/Opportunity/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>