force-app/main/default/objects/Opportunity/fields/Identify_decision_maker_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Identify_decision_maker_AI_Evidence__c</fullName>
    <label>Identify decision maker - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>