force-app/main/default/objects/Opportunity/fields/Identify_key_stakeholders_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Identify_key_stakeholders_AI_Evidence__c</fullName>
    <label>Identify key stakeholders - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>