force-app/main/default/objects/Opportunity/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>MIS-2043</description>
    <inlineHelpText>What is happening inside their business that they are looking to solve with our solution?</inlineHelpText>
    <label>Identify Pain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>