force-app/main/default/objects/Opportunity/fields/Identify_Pain_AI__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain_AI__c</fullName>
    <description>MIS-7356</description>
    <label>Identify Pain: AI</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>