force-app/main/default/objects/Opportunity/fields/Identify_Pain_AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain_AI_Feedback__c</fullName>
    <description>MIS-7356</description>
    <label>Identify Pain: AI Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>