force-app/main/default/objects/Opportunity/fields/Identify_steps_and_timeline_AI_Evidenc__c.field-meta.xml
<CustomField>
    <fullName>Identify_steps_and_timeline_AI_Evidenc__c</fullName>
    <label>Identify steps and timeline - AI Evidenc</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>