force-app/main/default/objects/Opportunity/fields/II__c.field-meta.xml
<CustomField>
    <fullName>II__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Investors Intelligence  - MIS 2073
MIS-3513 - Label changed</description>
    <inlineHelpText>Investors Intelligence</inlineHelpText>
    <label>Stock Intelligence</label>
    <type>Checkbox</type>
</CustomField>