force-app/main/default/objects/Opportunity/fields/Improve_metrics_belief_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Improve_metrics_belief_AI_Evidence__c</fullName>
    <label>Improve metrics belief - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>