force-app/main/default/objects/Opportunity/fields/Industry_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Industry_Subtype__c</fullName>
    <description>MIS-1350 use in email alerts</description>
    <formula>TEXT(Account.Industry_Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Subtype</label>
    <type>Text</type>
</CustomField>