force-app/main/default/objects/Opportunity/fields/Internal_Rank__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rank__c</fullName>
    <label>Internal Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>