force-app/main/default/objects/Opportunity/fields/Issues_with_Data_We_Show__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Data_We_Show__c</fullName>
    <label>Issues with Data We Show</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No known issues with data accuracy</fullName>
            </value>
            <value>
                <fullName>Accuracy discrepancies (on large sites)</fullName>
            </value>
            <value>
                <fullName>Client querying small sites</fullName>
            </value>
            <value>
                <fullName>Changes in data or algorithm mid-subscription</fullName>
            </value>
            <value>
                <fullName>Wrong website categorization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>