force-app/main/default/objects/Opportunity/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <label>Jira Link</label>
    <type>Url</type>
</CustomField>