force-app/main/default/objects/Opportunity/fields/Jira_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Status__c</fullName>
    <label>Jira Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Contact</fullName>
            </value>
            <value>
                <fullName>Waiting for NDA</fullName>
            </value>
            <value>
                <fullName>Tech Contact</fullName>
            </value>
            <value>
                <fullName>Sales Data Offer</fullName>
            </value>
            <value>
                <fullName>Waiting for Test Sample</fullName>
            </value>
            <value>
                <fullName>Review Test Sample</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Full Data Loading in Progress</fullName>
            </value>
            <value>
                <fullName>Full Data Review</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>