force-app/main/default/objects/Opportunity/fields/Known_issues_with_the_tool__c.field-meta.xml
<CustomField>
    <fullName>Known_issues_with_the_tool__c</fullName>
    <label>Known issues with the tool</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>